# mpcc_franka

./: .gitignore  CMakeLists.txt  mpcc_franka_plugin.xml  package.xml  ttmpc_franka_plugin.xml
NNmodel/env/: sdf_256x5_mesh_50000.pt
NNmodel/env/parameter/: bias_0.txt  bias_1.txt  bias_2.txt  bias_3.txt  bias_4.txt  weight_0.txt  weight_1.txt  weight_2.txt  weight_3.txt  weight_4.txt
NNmodel/self/: self_collision.pkl
NNmodel/self/parameter/: bias_0.txt  bias_1.txt  bias_2.txt  weight_0.txt  weight_1.txt  weight_2.txt
Params/: bounds.json  config.json  cost.json  model.json  normalization.json  sqp.json  track.json  track.py  track_from_letter.py
config/: mpcc_franka.yaml  rviz.rviz  ttmpc_franka.yaml
include/: config.h  types.h
include/Constraints/: bounds.h  constraints.h
include/Constraints/EnvCollision/: EnvCollisionModel.h
include/Constraints/SelfCollision/: SelfCollisionModel.h
include/Cost/: cost.h
include/Interfaces/: osqp_interface.h  solver_interface.h
include/MPC/: mpc.h
include/Model/: integrator.h  model.h  robot_data.h  robot_model.h
include/Params/: params.h  track.h
include/Spline/: arc_length_spline.h  cubic_spline.h  cubic_spline_rot.h
include/Tests/: constraints_test.h  cost_test.h  model_integrator_test.h  robot_model_test.h  self_collision_test.h  spline_test.h
include/mpcc_franka/: mpcc_controller.h
include/ttmpc_franka/: ttmpc_controller.h
launch/: mpcc_controller.launch  ttmpc_controller.launch
src/: mpcc_controller.cpp  ttmpc_controller.cpp  types.cpp
src/Constraints/: bounds.cpp  constraints.cpp
src/Constraints/EnvCollision/: EnvCollisionModel.cpp
src/Constraints/SelfCollision/: SelfCollisionModel.cpp
src/Cost/: cost.cpp
src/Interfaces/: osqp_interface.cpp
src/MPC/: mpc.cpp
src/Model/: integrator.cpp  model.cpp  robot_model.cpp  robot_model_backup.cpp
src/Params/: params.cpp  track.cpp
src/Spline/: arc_length_spline.cpp  cubic_spline.cpp  cubic_spline_rot.cpp
src/Tests/: main_test.cpp
